--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/uopoc/node-red-processstack"
+		"url": "https://github.com/uopoc/node-red-processstack.git"
 	},
 	"dependencies": {
 		"node-red-dashboard": ">=3.6.0"
